[gd_scene load_steps=23 format=3 uid="uid://crqp6ytp53h0h"]

[ext_resource type="Script" uid="uid://ikvdrjboayf" path="res://Entities/_Player/player.gd" id="1_v0ns8"]
[ext_resource type="Texture2D" uid="uid://dqxr4p6ccy1ib" path="res://Entities/_Player/Sprites/spr_player_basic.png" id="2_2532p"]
[ext_resource type="Texture2D" uid="uid://d0ujkg8j8168c" path="res://Assets/Textures/testveg.png" id="3_thoy8"]
[ext_resource type="Script" uid="uid://d2lnub5a177ia" path="res://Common/Camera/CameraPivot.gd" id="3_u3exm"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_o7r0b"]
radius = 0.45
height = 1.8

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_fdd6m"]
points = PackedVector3Array(0, -1.2, 0.2, -0.2, -1.2, 0, 0.2, -1.2, 0, 0, -1.2, -0.2, 0, -0.75, 0.4, -0.4, -0.75, 0, 0.4, -0.75, 0, 0, -0.75, -0.4, -0.45, 0, 0, 0.45, 0, 0, 0, 0, -0.4, 0, 0, 0.4, 0.2, 1.2, 0, -0.2, 1.2, 0, 0, 1.2, 0.2, 0, 1.2, -0.2)

[sub_resource type="CapsuleMesh" id="CapsuleMesh_sh0go"]
radius = 0.367
height = 1.889
radial_segments = 16
rings = 6

[sub_resource type="CapsuleMesh" id="CapsuleMesh_u3exm"]
radius = 0.45
height = 1.8
radial_segments = 8
rings = 4

[sub_resource type="CylinderMesh" id="CylinderMesh_thoy8"]
top_radius = 0.2
bottom_radius = 0.2
height = 1.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_vgrot"]
transparency = 1
albedo_texture = ExtResource("2_2532p")
backlight_enabled = true
backlight = Color(1, 1, 1, 1)
texture_filter = 0
billboard_mode = 2

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_pvunb"]
transparency = 1
albedo_texture = ExtResource("2_2532p")
backlight_enabled = true
backlight = Color(1, 1, 1, 1)
texture_filter = 0
billboard_keep_scale = true

[sub_resource type="QuadMesh" id="QuadMesh_vfyul"]
material = SubResource("StandardMaterial3D_pvunb")
size = Vector2(4, 4)

[sub_resource type="Animation" id="Animation_wadm3"]
resource_name = "RESET"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visual/SpriteFull:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_lqrfa"]
resource_name = "idle_down"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visual/SpriteFull:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_h4n4m"]
resource_name = "idle_left"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visual/SpriteFull:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [12]
}

[sub_resource type="Animation" id="Animation_0nxy0"]
resource_name = "idle_right"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visual/SpriteFull:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}

[sub_resource type="Animation" id="Animation_ek3xa"]
resource_name = "idle_up"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visual/SpriteFull:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}

[sub_resource type="Animation" id="Animation_4bwoc"]
resource_name = "walk_down"
loop_mode = 1
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visual/SpriteFull:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_m0c0t"]
resource_name = "walk_left"
loop_mode = 1
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visual/SpriteFull:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [12, 13, 14, 15]
}

[sub_resource type="Animation" id="Animation_ne1ry"]
resource_name = "walk_right"
loop_mode = 1
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visual/SpriteFull:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [4, 5, 6, 7]
}

[sub_resource type="Animation" id="Animation_3ltif"]
resource_name = "walk_up"
loop_mode = 1
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visual/SpriteFull:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [8, 9, 10, 11]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_yt2hf"]
_data = {
&"RESET": SubResource("Animation_wadm3"),
&"idle_down": SubResource("Animation_lqrfa"),
&"idle_left": SubResource("Animation_h4n4m"),
&"idle_right": SubResource("Animation_0nxy0"),
&"idle_up": SubResource("Animation_ek3xa"),
&"walk_down": SubResource("Animation_4bwoc"),
&"walk_left": SubResource("Animation_m0c0t"),
&"walk_right": SubResource("Animation_ne1ry"),
&"walk_up": SubResource("Animation_3ltif")
}

[node name="Player" type="CharacterBody3D" groups=["player"]]
collision_layer = 2
collision_mask = 9
floor_stop_on_slope = false
floor_block_on_wall = false
floor_max_angle = 1.11003
floor_snap_length = 0.2
script = ExtResource("1_v0ns8")

[node name="CollisionStanding" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9, 0)
shape = SubResource("CapsuleShape3D_o7r0b")

[node name="CollisionStanding2" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.2, 0)
visible = false
shape = SubResource("ConvexPolygonShape3D_fdd6m")
disabled = true

[node name="BasicShadow" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.997564, 0.0697565, 0, -0.0697565, 0.997564, 0, 0.980713, -0.359922)
cast_shadow = 3
mesh = SubResource("CapsuleMesh_sh0go")

[node name="Visual" type="Node3D" parent="."]

[node name="MeshInstance3D2" type="MeshInstance3D" parent="Visual"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9, 0)
visible = false
mesh = SubResource("CapsuleMesh_u3exm")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Visual/MeshInstance3D2"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0.45, 0.173)
visible = false
mesh = SubResource("CylinderMesh_thoy8")

[node name="SpriteFull" type="Sprite3D" parent="Visual"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
sorting_offset = 2.0
material_override = SubResource("StandardMaterial3D_vgrot")
cast_shadow = 0
pixel_size = 0.0625
billboard = 2
shaded = true
texture_filter = 0
texture = ExtResource("2_2532p")
hframes = 4
vframes = 4

[node name="MeshInstance3D" type="MeshInstance3D" parent="Visual"]
transform = Transform3D(1, 0, 0, 0, 1.414, 0, 0, 0, 1, 0, 1.414, 0)
visible = false
mesh = SubResource("QuadMesh_vfyul")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Visual"]
root_node = NodePath("../..")
libraries = {
&"": SubResource("AnimationLibrary_yt2hf")
}

[node name="direction_sprite" type="Node3D" parent="Visual"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.148265, 0)
visible = false

[node name="Sprite3D" type="Sprite3D" parent="Visual/direction_sprite"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0.264719)
texture_filter = 0
texture = ExtResource("3_thoy8")

[node name="OmniLight3D" type="OmniLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.61812, 0.496947)
visible = false
light_energy = 0.27
shadow_enabled = true
omni_range = 2.814
omni_attenuation = 0.592

[node name="CameraRoot" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
script = ExtResource("3_u3exm")

[node name="CameraYaw" type="Node3D" parent="CameraRoot"]

[node name="CameraPitch" type="Node3D" parent="CameraRoot/CameraYaw"]

[node name="SpringArm" type="SpringArm3D" parent="CameraRoot/CameraYaw/CameraPitch"]
spring_length = 5.0

[node name="Camera" type="Camera3D" parent="CameraRoot/CameraYaw/CameraPitch/SpringArm"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 5)
keep_aspect = 0
current = true
size = 0.015
